<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>descartes_capability</name>
  <version>0.0.1</version>
  <description>A move_group capability that uses Descartes for Cartesian Planning</description>

  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/descartes_capability</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/descartes_capability/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/descartes_capability/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>descartes_trajectory</depend>
  <depend>descartes_planner</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend version_eq="3.9">clang-format</depend>

  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <test_depend>moveit_resources</test_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/descartes_capability_plugin_description.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
